--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - ostello
     volumes:
       - ./server:/app
-    build: ./
+    build: ./server
     ports: 
       - 4000:4000
     depends_on:
